# vellar-dapp

./: .env.example  .gitignore  .prettierignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  render.yaml  tsconfig.base.json  turbo.json  vercel.json
.github/workflows/: ci.yml
apps/docs/: README.md  api-reference.md  architecture.md  core-flows.md  getting-started.md  overview.md  policy-contract.md  security-model.md
apps/extension/: README.md  package.json  wxt.config.ts
apps/extension/entrypoints/: background.ts  bridge.content.ts  provider.content.ts
apps/extension/lib/: browser-kv.ts  buffer-polyfill.ts  device-key.test.ts  device-key.ts  messages.ts  router.test.ts  router.ts  state.test.ts  state.ts  tx-signer.ts  tx-summary.test.ts  tx-summary.ts  verification.ts
apps/web/: .env.example  README.md  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  onboarding-actions.test.tsx  onboarding-actions.tsx  page.test.tsx  page.tsx  providers.tsx
apps/web/components/: app-shell.tsx  logo.tsx
apps/web/e2e/: cleanup.spec.ts  extension.spec.ts  fund.ts  home.spec.ts  policy.spec.ts  verify.spec.ts  wallet.spec.ts
apps/web/lib/: balances.ts  config.ts  connector-factory.ts  docs-registry.ts  (+12 more)
contracts/: Cargo.toml  README.md
contracts/policy-templates/spending-limit/: Cargo.toml
contracts/policy-templates/spending-limit/src/: lib.rs  test.rs
contracts/policy-templates/spending-limit/test_snapshots/test/: accumulates_across_transfers_within_window.1.json  allows_batch_of_transfers_within_limit.1.json  allows_spend_up_to_limit.1.json  constructor_rejects_zero_limit.1.json  constructor_stores_config.1.json  install_marks_installed.1.json  install_rejects_other_wallet.1.json  policy_rejects_before_install.1.json  policy_rejects_other_wallet_source.1.json  rejects_batch_of_transfers_over_limit.1.json  rejects_cumulative_over_limit.1.json  rejects_transfer_targeting_wallet_itself.1.json  respects_custom_limit_and_window.1.json  uninstall_clears_state_once_removed.1.json  uninstall_refuses_while_still_signer.1.json  window_does_not_reset_before_elapse.1.json  window_resets_after_elapse.1.json
docs/: observability.md
infra/: README.md
infra/docker/: docker-compose.yml  verification-builder.Dockerfile
services/all-in-one/: package.json
services/api-gateway/: README.md  package.json
services/lifecycle-service/: README.md  package.json
services/permission-service/: README.md  package.json
services/policy-service/: README.md  package.json
services/verification-service/: README.md  package.json
services/wallet-service/: README.md  package.json
services/worker-service/: README.md  package.json
(+96 files in other folders)
